Fixed overflowing description.
Changed .content-item and .content-item .header to fix the bug where longer descriptions would overflow from the container and other stats would be hidden behind the description.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -133,12 +133,16 @@ div.container {
     border-radius: 4px;
     box-shadow: none;
     color: #333;
+    position: relative;
+    overflow: hidden;
 }
 
 .content-item .header {
     font-weight: bold;
     font-size: 17px;
     margin-bottom: 10px;
+    height: 70%;
+    overflow: hidden;
 }
 
 .content-item p.tagline {
